<resources>
    <string name="app_name">RSR Pechhulp</string>
    <string name="infoBtn">info</string>
    <string name="title">Privacybeleid</string>
    <string name="message">Om deze app te gebruiken, dient u het <a href='http://www.rsr.nl/index.php?page=privacy-wetgeving'>privacybeleid</a> te accepteren.</string>
    <string name="close">Bevestig</string>
    <string name="logo">RSR logo</string>
    <string name="car_logo">RSR car logo</string>
    <string name="ring_phone">Bel RSR nu</string>
    <string name="app_icon_name">RSR</string>
    <string name="main_label">RSR Revalidatieservice</string>
    <string name="location_title">Uw Locatie</string>
    <string name="write_down_location">Onthoud deze locatie voor het telefoongesprek.</string>
    <string name="cancel">Annuleren</string>
    <string name="call_dialog_title">Belkosten</string>
    <string name="call_dialog_text">Voor dit nummer betaalt u uw gebruikelijke belkosten.</string>
    <string name="call_text">Bel nu</string>
    <string name="phone_number">+319007788990</string>
    <string name="no_gps_title">GPS uitgeschakeld</string>
    <string name="no_gps_message">Uw GPS is uitgeschakeld.Schakel het alstublieft in om door te gaan.</string>
    <string name="no_internet_title">Netwerk is uitgeschakeld</string>
    <string name="no_internet_message">Uw netwerk is uitgeschakeld.Schakel het alstublieft in om door te gaan.</string>
    <string name="activate">Aanzetten</string>
    <string name="contact_title">Neem contact op met RSR Nederland</string>
    <string name="phone_number_with_spaces">+31900 77 88 99 0</string>
</resources>
