<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingTop="16dp"
    android:paddingStart="20dp"
    android:paddingEnd="25dp">

    <TextView
        android:id="@+id/warning_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/textColor"
        android:text="@string/no_gps_title"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/warning_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warning_title_tv"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/no_gps_message"
        android:textColorLink="@color/hyperlink"
        android:textSize="16sp"
        android:textColor="@color/textColor"/>

    <Button
        android:id="@+id/activate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warning_message_tv"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/activate"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/close_warning_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warning_message_tv"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/activate_button"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textSize="14sp" />

</RelativeLayout>