<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:alpha="0.85">

    <Button
        android:id="@+id/close_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/close_button_refactored"
        android:paddingLeft="8dp"
        android:text="@string/cancel"
        android:typeface="sans"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/callDialogColor">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/call_dialog_title"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:text="@string/call_dialog_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/call_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:typeface="sans"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/main_btn_phone"
            android:paddingLeft="15dp"
            android:drawablePadding="-15dp"
            android:text="@string/call_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </RelativeLayout>

</LinearLayout>